# ft_printf

./: CMakeLists.txt  Makefile  add_buff.c  add_char.c  add_d.c  add_str.c  ft_add_c_s_d.c  ft_add_double.c  ft_color.c  ft_dtoa.c  ft_itoa_base_c.c  ft_math.c  ft_okr_double.c  ft_oxu.c  ft_pars.c  ft_pars2.c  ft_pointer.c  ft_pr_help.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  main.c
42_printf_unit_tests/tests/: Makefile
42_printf_unit_tests/tests/conv_cap_e/: 000_launcher.c  001_zero_double_various_flags.c  002_zero_double_various_flags_and_5_width.c  003_zero_double_various_flags_and_1_width.c  004_zero_double_various_flags_and_dot_precision.c  005_zero_double_various_flags_and_8_precision.c  006_zero_double_various_flags_and_5_width_and_8_precision.c  007_zero_double_various_flags_and_15_width_and_8_precision.c  008_zero_double_various_flags_combined_with_minus.c  009_zero_double_various_flags_combined_with_plus.c  010_minus_zero_double_various_flags.c  011_minus_zero_double_various_flags_and_5_width.c  012_minus_zero_double_various_flags_and_1_width.c  013_minus_zero_double_various_flags_and_dot_precision.c  014_minus_zero_double_various_flags_and_8_precision.c  015_minus_zero_double_various_flags_and_5_width_and_8_precision.c  016_minus_zero_double_various_flags_and_15_width_and_8_precision.c  017_minus_zero_double_various_flags_combined_with_minus.c  018_minus_zero_double_various_flags_combined_with_plus.c  019_nan_various_flags.c  020_nan_various_flags_and_5_width.c  021_nan_various_flags_and_1_width.c  028_infinity_various_flags.c  (+92 more)
libft/: Makefile  libft.h
(+527 files in other folders)
